# game-omega

./: .clang-format  .gitignore  CMakeLists.txt
applications/client/: CMakeLists.txt  main.cpp
applications/client/core/: game.h  platform.h  sound-manager.h  ui.h  video.cpp  video.h
applications/client/core/debug/: debug-draw.cpp  debug-draw.h  debug-manager.cpp  debug-manager.h
applications/client/core/rendering/: light.h  model.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  util.h
applications/client/core/shader/: bloom_blur.cs  bloom_extract.cs  colored_preview.fs  debug-line.fs  debug-line.vs  deferred_lighting.fs  final.fs  particle-flare.fs  particle-splat.fs  particle-splat.gs  pos+norm+tc.fs  pos.vs  ssao.cs  ssao_blur.cs  types.fs  unlit.fs  util.fs  video.fs
applications/client/data/: tile.mtl
applications/client/game/: game.cpp  game.h
applications/client/game/gamestates/: GameState.cpp  GameState.h  MenuState.cpp  MenuState.h
applications/client/game/ui/: mainmenu.cpp  mainmenu.h  ui.cpp  ui.h
applications/client/game/util/: hexcoords.cpp  hexcoords.h  utility.cpp  utility.h
applications/client/game/world/: c_world.cpp  c_world.h  chunk.cpp  chunk.h  tile.h  world.cpp  world.h
applications/common/: CMakeLists.txt
applications/common/comm/: comm.cpp  comm.h
applications/common/game/util/: hexcoords.cpp
applications/common/game/world/: chunk.cpp  chunk.h
applications/server/: CMakeLists.txt  main.cpp
applications/server/world/: world.cpp  world.h
common/cppgl/src/: context.cpp  (+4 more)
common/ecs/: CMakeLists.txt  storage.h
(+1 files in other folders)
